--- a/projects/llm-wrapper-api/Dockerfile
+++ b/projects/llm-wrapper-api/Dockerfile
@@ -7,7 +7,6 @@ ARG USERNAME=pyuser
 ARG COMMIT_HASH=""
 
 WORKDIR /app
-COPY . .
 
 # -----------------------------------------------
 # test stage (--target=testを付けてビルド)
@@ -16,13 +15,15 @@ COPY . .
 FROM base AS test
 
 ENV TZ=Asia/Tokyo
-ENV PATH="/app/.venv/bin:$PATH"
 
 COPY --from=ghcr.io/astral-sh/uv:latest /uv /uvx /bin/
-COPY --from=base /app .
 
-RUN uv sync
-RUN python -m pytest -s -vv --tb=short --cov
+RUN --mount=type=bind,source=src,target=src \
+  --mount=type=bind,source=tests,target=tests \
+  --mount=type=bind,source=uv.lock,target=uv.lock \
+  --mount=type=bind,source=pyproject.toml,target=pyproject.toml \
+  uv sync \
+  && uv run -m pytest -s -vv --tb=short --cov
 
 # -----------------------------------------------
 # builder stage
@@ -30,9 +31,11 @@ RUN python -m pytest -s -vv --tb=short --cov
 FROM base AS builder
 
 COPY --from=ghcr.io/astral-sh/uv:latest /uv /uvx /bin/
-COPY --from=base /app .
+COPY src src
 
-RUN uv sync --frozen --no-dev
+RUN --mount=type=bind,source=uv.lock,target=uv.lock \
+  --mount=type=bind,source=pyproject.toml,target=pyproject.toml \
+  uv sync --no-dev --frozen
 
 # -----------------------------------------------
 # final stage
@@ -43,15 +46,15 @@ ARG USERNAME
 ARG COMMIT_HASH
 
 ENV TZ=Asia/Tokyo
-ENV PATH="/app/.venv/bin:$PATH"
+ENV PATH=/app/.venv/bin:$PATH
 ENV APP_VERSION=${COMMIT_HASH}
 
 RUN adduser -D $USERNAME
 
-COPY --from=builder --chown=$USERNAME:$USERNAME /app/.venv ./.venv
-COPY --from=builder --chown=$USERNAME:$USERNAME /app/src ./src
+COPY --from=builder --chown=$USERNAME:$USERNAME /app/.venv .venv
+COPY --from=builder --chown=$USERNAME:$USERNAME /app/src src
 
 USER $USERNAME
 
 EXPOSE 8000
-CMD ["python", ".venv/bin/uvicorn", "src.main:app", "--host", "0.0.0.0"]
+CMD ["uvicorn", "src.main:app", "--host", "0.0.0.0"]
