--- a/projects/portfolio/.devcontainer/devcontainer.json
+++ b/projects/portfolio/.devcontainer/devcontainer.json
@@ -3,6 +3,7 @@
   "build": {
     "dockerfile": "Dockerfile"
   },
+  "appPort": ["5173:5173"],
   "containerEnv": {
     "SHELL": "/bin/bash"
   },
