--- a/projects/portfolio/package.json
+++ b/projects/portfolio/package.json
@@ -19,6 +19,7 @@
     "react-markdown": "^10.0.0",
     "react-syntax-highlighter": "^15.6.1",
     "remark-gfm": "^4.0.1",
+    "tsx": "^4.19.3",
     "zod": "^3.24.2"
   },
   "devDependencies": {
