refactor: client dirs

--- a/projects/portfolio/biome.json
+++ b/projects/portfolio/biome.json
@@ -7,12 +7,12 @@
   },
   "files": {
     "ignoreUnknown": false,
-    "ignore": ["src/routeTree.gen.ts"]
+    "ignore": ["src/client/routeTree.gen.ts"]
   },
   "formatter": {
     "enabled": true,
     "indentStyle": "space",
-    "ignore": ["src/routeTree.gen.ts"]
+    "ignore": ["src/client/routeTree.gen.ts"]
   },
   "organizeImports": {
     "enabled": true
