--- a/projects/hono-openai-client/package.json
+++ b/projects/hono-openai-client/package.json
@@ -4,7 +4,8 @@
     "dev": "bun run --hot src/index.tsx"
   },
   "dependencies": {
-    "hono": "^4.7.4"
+    "hono": "^4.7.4",
+    "openai": "^4.86.2"
   },
   "devDependencies": {
     "@types/bun": "latest"
