--- a/projects/portfolio/package.json
+++ b/projects/portfolio/package.json
@@ -14,6 +14,7 @@
     "@tailwindcss/typography": "^0.5.16",
     "@tanstack/react-router": "^1.114.17",
     "hono": "^4.7.4",
+    "openai": "^4.87.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-markdown": "^10.1.0",
