--- a/docker/portfolio/docker-compose.dev.yml
+++ b/docker/portfolio/docker-compose.dev.yml
@@ -7,6 +7,8 @@ services:
       - 8000:3000
     env_file:
       - .env
+    environment:
+      SERVER_PORT: 3000
 
   llm-wrapper-api:
     container_name: llm-wrapper-api
