--- a/docker/portfolio/docker-compose.yml
+++ b/docker/portfolio/docker-compose.yml
@@ -7,7 +7,8 @@ services:
       - 8000:3000
     env_file:
       - .env
-
+    environment:
+      SERVER_PORT: 3000
   llm-wrapper-api:
     container_name: llm-wrapper-api
     image: ghcr.io/u7chan/monorepo/llm-wrapper-api:latest
