feat: Add type error checks with the lint command

--- a/projects/portfolio/package.json
+++ b/projects/portfolio/package.json
@@ -5,7 +5,7 @@
     "dev": "dotenv -- vite --mode dev --host 0.0.0.0",
     "build": "vite build",
     "start": "NODE_ENV=production bunx tsx ./src/server/node-server.ts",
-    "lint": "biome lint ./src",
+    "lint": "bunx tsc && biome lint ./src",
     "format": "biome format --write ./src"
   },
   "dependencies": {
