feat: add litellm for portfolio

--- a/docker/portfolio/.env.example
+++ b/docker/portfolio/.env.example
@@ -1,1 +1,6 @@
 # Define environment variables here.
+DATABASE_URL=postgresql://postgres:postgres@litellm-db:5432/litellm
+LITELLM_MASTER_KEY=sk-1234
+LITELLM_SALT_KEY=sk-XXXXXXXX
+POSTGRES_USER=postgres
+POSTGRES_PASSWORD=postgres
