--- a/docker/portfolio/docker-compose.yml
+++ b/docker/portfolio/docker-compose.yml
@@ -9,6 +9,7 @@ services:
       - .env
     environment:
       SERVER_PORT: 3000
+
   llm-wrapper-api:
     container_name: llm-wrapper-api
     image: ghcr.io/u7chan/monorepo/llm-wrapper-api:latest
@@ -17,3 +18,27 @@ services:
       - 8001:8000
     env_file:
       - .env
+
+  litellm:
+    container_name: litellm
+    image: ghcr.io/berriai/litellm:main-latest
+    ports:
+      - 4000:4000
+    env_file:
+      - .env
+    environment:
+      STORE_MODEL_IN_DB: "True"
+    depends_on:
+      - litellm-db
+
+  litellm-db:
+    image: postgres:17-alpine
+    env_file:
+      - .env
+    environment:
+      POSTGRES_DB: litellm
+    volumes:
+      - litellm-db-data:/var/lib/postgresql/data
+
+volumes:
+  litellm-db-data:
