--- a/projects/portfolio/package.json
+++ b/projects/portfolio/package.json
@@ -3,6 +3,7 @@
   "type": "module",
   "scripts": {
     "dev": "dotenv -- vite --mode dev --host 0.0.0.0",
+    "typegen": "vite build --mode typegen",
     "build": "vite build",
     "start": "NODE_ENV=production bunx tsx ./src/server/node-server.ts",
     "lint": "tsc && biome lint ./src",
@@ -38,6 +39,7 @@
     "tailwindcss": "^4.0.17",
     "typescript": "^5.8.2",
     "vite": "^6.2.3",
+    "vite-plugin-dts": "^4.5.3",
     "vite-tsconfig-paths": "^5.1.4"
   }
 }
