--- a/projects/honox-example-todo-list/package.json
+++ b/projects/honox-example-todo-list/package.json
@@ -4,7 +4,8 @@
     "dev": "bun run --hot src/index.ts"
   },
   "dependencies": {
-    "hono": "^4.7.5"
+    "hono": "^4.7.5",
+    "honox": "^0.1.39"
   },
   "devDependencies": {
     "@types/bun": "latest"
