--- a/projects/honox-example-todo-list/package.json
+++ b/projects/honox-example-todo-list/package.json
@@ -1,7 +1,7 @@
 {
   "name": "honox-example-todo-list",
   "scripts": {
-    "dev": "bun run --hot src/index.ts"
+    "dev": "bun run --hot src/server.ts"
   },
   "dependencies": {
     "hono": "^4.7.5",
