--- a/projects/honox-example-todo-list/package.json
+++ b/projects/honox-example-todo-list/package.json
@@ -11,7 +11,7 @@
   },
   "devDependencies": {
     "@types/bun": "latest",
-    "typescript": "^5.8.2",
+    "typescript": "5.5.4",
     "vite": "^6.2.4"
   }
 }
