--- a/projects/honox-example-todo-list/.devcontainer/devcontainer.json
+++ b/projects/honox-example-todo-list/.devcontainer/devcontainer.json
@@ -4,5 +4,16 @@
 	"build": {
 		"dockerfile": "Dockerfile",
 		"context": "."
+	},
+	"customizations": {
+		"vscode": {
+			"settings": {
+				"editor.defaultFormatter": "esbenp.prettier-vscode",
+				"editor.formatOnSave": true
+			},
+			"extensions": [
+				"esbenp.prettier-vscode"
+			]
+		}
 	}
 }
