--- a/projects/chatbot-ui/.devcontainer/devcontainer.json
+++ b/projects/chatbot-ui/.devcontainer/devcontainer.json
@@ -18,39 +18,42 @@
   "remoteUser": "u7chan",
   "postCreateCommand": "echo TODO",
   "customizations": {
-    // "vscode": {
-    //   "settings": {
-    //     "editor.tabSize": 2,
-    //     "editor.formatOnSave": true,
-    //     "biome.lspBin": "./node_modules/.bin/biome",
-    //     "[typescriptreact]": {
-    //       "editor.defaultFormatter": "biomejs.biome"
-    //     },
-    //     "files.associations": {
-    //       "*.css": "tailwindcss"
-    //     },
-    //     "emeraldwalk.runonsave": {
-    //       "commands": [
-    //         {
-    //           "match": "\\.(ts|tsx|js|jsx|html)$",
-    //           "cmd": "bunx @biomejs/biome lint \"${file}\" --write --unsafe"
-    //         }
-    //       ]
-    //     }
-    //   },
-    //   "extensions": [
-    //     "biomejs.biome",
-    //     "formulahendry.auto-close-tag",
-    //     "formulahendry.auto-rename-tag",
-    //     "mhutchie.git-graph",
-    //     "eamodio.gitlens",
-    //     "oderwat.indent-rainbow",
-    //     "wix.vscode-import-cost",
-    //     "shardulm94.trailing-spaces",
-    //     "emeraldwalk.RunOnSave",
-    //     "bradlc.vscode-tailwindcss",
-    //     "stivo.tailwind-fold"
-    //   ]
-    // }
+    "vscode": {
+      "settings": {
+        "editor.tabSize": 2,
+        "editor.formatOnSave": true,
+        "biome.lspBin": "./node_modules/.bin/biome",
+        "[typescriptreact]": {
+          "editor.defaultFormatter": "biomejs.biome"
+        },
+        "editor.codeActionsOnSave": {
+          "source.organizeImports.biome": "explicit"
+        },
+        "files.associations": {
+          "*.css": "tailwindcss"
+        },
+        "emeraldwalk.runonsave": {
+          "commands": [
+            {
+              "match": "\\.(ts|tsx|js|jsx|html)$",
+              "cmd": "bunx @biomejs/biome lint \"${file}\" --write --unsafe"
+            }
+          ]
+        }
+      },
+      "extensions": [
+        "biomejs.biome",
+        "formulahendry.auto-close-tag",
+        "formulahendry.auto-rename-tag",
+        "mhutchie.git-graph",
+        "eamodio.gitlens",
+        "oderwat.indent-rainbow",
+        "wix.vscode-import-cost",
+        "shardulm94.trailing-spaces",
+        "emeraldwalk.RunOnSave",
+        "bradlc.vscode-tailwindcss",
+        "stivo.tailwind-fold"
+      ]
+    }
   }
 }
