--- a/projects/chatbot-ui/tsconfig.json
+++ b/projects/chatbot-ui/tsconfig.json
@@ -3,6 +3,7 @@
     "target": "ESNext",
     "module": "NodeNext",
     "strict": true,
+    "noEmit": true,
     "verbatimModuleSyntax": true,
     "skipLibCheck": true,
     "types": [
