--- a/projects/chatbot-ui/package.json
+++ b/projects/chatbot-ui/package.json
@@ -12,8 +12,10 @@
   },
   "devDependencies": {
     "@biomejs/biome": "1.9.4",
+    "@hono/vite-build": "^1.5.0",
     "@types/node": "^22.14.0",
     "tsx": "^4.19.3",
-    "typescript": "^5.8.2"
+    "typescript": "^5.8.2",
+    "vite": "^6.2.5"
   }
 }
