--- a/projects/chatbot-ui/tsconfig.json
+++ b/projects/chatbot-ui/tsconfig.json
@@ -1,7 +1,8 @@
 {
   "compilerOptions": {
     "target": "ESNext",
-    "module": "NodeNext",
+    "module": "ESNext",
+    "moduleResolution": "Bundler",
     "strict": true,
     "noEmit": true,
     "verbatimModuleSyntax": true,
