--- a/projects/chatbot-ui/package.json
+++ b/projects/chatbot-ui/package.json
@@ -2,7 +2,7 @@
   "name": "chatbot-ui",
   "type": "module",
   "scripts": {
-    "dev": "tsx watch src/dev-serve.ts",
+    "dev": "vite",
     "build": "vite build",
     "start": "node dist/index.js",
     "lint": "tsc && biome lint --error-on-warnings ./src",
