--- a/projects/chatbot-ui/package.json
+++ b/projects/chatbot-ui/package.json
@@ -6,7 +6,8 @@
     "build": "vite build",
     "start": "node dist/index.js",
     "lint": "tsc && biome lint --error-on-warnings ./src",
-    "format": "biome check --write ./src"
+    "format": "biome check --write ./src",
+    "test": "vitest run"
   },
   "dependencies": {
     "hono": "^4.7.5"
@@ -17,6 +18,7 @@
     "@hono/vite-dev-server": "^0.19.0",
     "@types/node": "^22.14.0",
     "typescript": "^5.8.3",
-    "vite": "^6.2.5"
+    "vite": "^6.2.5",
+    "vitest": "^3.1.1"
   }
 }
