--- a/projects/chatbot-ui/package.json
+++ b/projects/chatbot-ui/package.json
@@ -19,6 +19,7 @@
     "@types/node": "^22.14.0",
     "typescript": "^5.8.3",
     "vite": "^6.2.5",
+    "vite-tsconfig-paths": "^5.1.4",
     "vitest": "^3.1.1"
   }
 }
