feat: support alias import

--- a/projects/chatbot-ui/tsconfig.json
+++ b/projects/chatbot-ui/tsconfig.json
@@ -12,5 +12,11 @@
     ],
     "jsx": "react-jsx",
     "jsxImportSource": "hono/jsx",
+    "baseUrl": "./",
+    "paths": {
+      "@/*": [
+        "./src/*"
+      ]
+    }
   }
 }
