--- a/projects/chatbot-ui/package.json
+++ b/projects/chatbot-ui/package.json
@@ -2,21 +2,26 @@
   "name": "chatbot-ui",
   "type": "module",
   "scripts": {
-    "dev": "vite",
-    "build": "vite build",
+    "dev": "DEV_MODE=true vite",
+    "build": "vite build --mode client && vite build --mode server",
     "start": "node dist/index.js",
     "lint": "tsc && biome lint --error-on-warnings ./src",
     "format": "biome check --write ./src",
     "test": "vitest run"
   },
   "dependencies": {
-    "hono": "^4.7.5"
+    "hono": "^4.7.5",
+    "react": "^19.1.0",
+    "react-dom": "^19.1.0"
   },
   "devDependencies": {
     "@biomejs/biome": "1.9.4",
+    "@hono/react-renderer": "^0.3.0",
     "@hono/vite-build": "^1.5.0",
     "@hono/vite-dev-server": "^0.19.0",
     "@types/node": "^22.14.0",
+    "@types/react": "^19.1.0",
+    "@types/react-dom": "^19.1.1",
     "typescript": "^5.8.3",
     "vite": "^6.2.5",
     "vite-tsconfig-paths": "^5.1.4",
