feat: change import alias from @ to #

--- a/projects/chatbot-ui/tsconfig.json
+++ b/projects/chatbot-ui/tsconfig.json
@@ -12,7 +12,7 @@
     "jsxImportSource": "react",
     "baseUrl": "./",
     "paths": {
-      "@/*": ["./src/*"]
+      "#/*": ["./src/*"]
     }
   }
 }
