--- a/projects/chatbot-ui/package.json
+++ b/projects/chatbot-ui/package.json
@@ -19,10 +19,12 @@
     "@hono/react-renderer": "^1.0.1",
     "@hono/vite-build": "^1.6.0",
     "@hono/vite-dev-server": "^0.19.0",
+    "@tailwindcss/postcss": "^4.1.3",
     "@tailwindcss/vite": "^4.1.3",
     "@types/node": "^22.14.0",
     "@types/react": "^19.1.0",
     "@types/react-dom": "^19.1.2",
+    "postcss": "^8.5.3",
     "tailwindcss": "^4.1.3",
     "typescript": "^5.8.3",
     "vite": "^6.2.6",
