--- a/projects/portfolio/package.json
+++ b/projects/portfolio/package.json
@@ -7,7 +7,7 @@
     "build": "vite build",
     "start": "NODE_ENV=production bunx tsx ./src/server/node-server.ts",
     "lint": "tsc && biome lint ./src",
-    "format": "biome format --write ./src"
+    "format": "biome check ./src --write --unsafe"
   },
   "dependencies": {
     "@hono/node-server": "^1.14.1",
