--- a/projects/portfolio/package.json
+++ b/projects/portfolio/package.json
@@ -28,6 +28,7 @@
     "@biomejs/biome": "^1.9.4",
     "@hono/vite-dev-server": "^0.19.0",
     "@tailwindcss/postcss": "^4.1.4",
+    "@tanstack/react-router-devtools": "^1.116.0",
     "@tanstack/router-plugin": "^1.116.1",
     "@types/node": "^22.14.1",
     "@types/react": "^19.1.2",
