feat: add extension " github.vscode-pull-request-github"

--- a/projects/portfolio/.devcontainer/devcontainer.json
+++ b/projects/portfolio/.devcontainer/devcontainer.json
@@ -43,6 +43,7 @@
         "eamodio.gitlens",
         "oderwat.indent-rainbow",
         "wix.vscode-import-cost",
+        "github.vscode-pull-request-github",
         // for Tailwind CSS --
         "shardulm94.trailing-spaces",
         // "emeraldwalk.RunOnSave",
