--- a/projects/portfolio/biome.json
+++ b/projects/portfolio/biome.json
@@ -7,12 +7,11 @@
   },
   "files": {
     "ignoreUnknown": false,
-    "ignore": ["src/client/routeTree.gen.ts", "src/server/app.d.ts"]
+    "ignore": ["node_modules", "src/client/routeTree.gen.ts", "src/server/app.d.ts"]
   },
   "formatter": {
     "enabled": true,
-    "indentStyle": "space",
-    "ignore": ["src/client/routeTree.gen.ts", "src/server/app.d.ts"]
+    "indentStyle": "space"
   },
   "organizeImports": {
     "enabled": true
