--- a/projects/node-mcp-server/package.json
+++ b/projects/node-mcp-server/package.json
@@ -5,6 +5,7 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
-    "@modelcontextprotocol/sdk": "^1.10.2"
+    "@modelcontextprotocol/sdk": "^1.10.2",
+    "zod": "^3.24.3"
   }
 }
