--- a/projects/node-mcp-server/package.json
+++ b/projects/node-mcp-server/package.json
@@ -1,8 +1,9 @@
 {
   "name": "mcp-server",
   "private": true,
+  "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node --loader ts-node/esm src/index.ts"
   },
   "dependencies": {
     "@modelcontextprotocol/sdk": "^1.10.2",
