--- a/projects/node-mcp-server/tsconfig.json
+++ b/projects/node-mcp-server/tsconfig.json
@@ -2,6 +2,11 @@
   "compilerOptions": {
     "target": "ESNext",
     "module": "NodeNext",
-    "strict": true
-  }
+    "strict": true,
+    "noEmit": true
+  },
+  "exclude": [
+    "node_modules",
+    "dist"
+  ],
 }
