--- a/projects/hono-mcp-server/package.json
+++ b/projects/hono-mcp-server/package.json
@@ -1,7 +1,7 @@
 {
   "name": "hono-mcp-server",
   "scripts": {
-    "dev": "bun run --hot src/index.ts"
+    "dev": "dotenv -- bun run --hot src/index.ts"
   },
   "dependencies": {
     "@modelcontextprotocol/sdk": "^1.10.2",
