feat: add timezone settings

--- a/projects/hono-mcp-server/Dockerfile
+++ b/projects/hono-mcp-server/Dockerfile
@@ -14,13 +14,19 @@ COPY tsconfig.json ./
 
 FROM base AS runner
 
+ENV TZ=Asia/Tokyo
+
 WORKDIR /app
+
+# Set the timezone to Asia/Tokyo
+RUN apk add --no-cache tzdata \
+  && cp /usr/share/zoneinfo/Asia/Tokyo /etc/localtime \
+  && echo "Asia/Tokyo" > /etc/timezone
 
 # Copy only the necessary files from the build stage
 COPY --from=build /app/node_modules ./node_modules
 COPY --from=build /app/src ./src
 COPY --from=build /app/tsconfig.json ./
-
 
 # Expose the port the app runs on
 EXPOSE 3000
