feat: add mcp-server services

--- a/docker/portfolio/.env.example
+++ b/docker/portfolio/.env.example
@@ -2,5 +2,6 @@
 DATABASE_URL=postgresql://postgres:postgres@litellm-db:5432/litellm
 LITELLM_MASTER_KEY=sk-1234
 LITELLM_SALT_KEY=sk-XXXXXXXX
+OPENAI_API_KEY=sk-YYYYYYYY
 POSTGRES_USER=postgres
 POSTGRES_PASSWORD=postgres
