--- a/projects/hono-mcp-client-minimum/package.json
+++ b/projects/hono-mcp-client-minimum/package.json
@@ -1,12 +1,14 @@
 {
   "name": "hono-mcp-client-minimum",
   "scripts": {
-    "dev": "bun run --hot src/index.ts"
+    "dev": "dotenv -- bun run --hot src/index.tsx"
   },
   "dependencies": {
-    "hono": "^4.7.7"
+    "hono": "^4.7.7",
+    "openai": "^4.96.0"
   },
   "devDependencies": {
-    "@types/bun": "latest"
+    "@types/bun": "latest",
+    "dotenv-cli": "^8.0.0"
   }
 }
