--- a/projects/hono-mcp-client-minimum/tsconfig.json
+++ b/projects/hono-mcp-client-minimum/tsconfig.json
@@ -1,5 +1,7 @@
 {
   "compilerOptions": {
+    "target": "ESNext",
+    "module": "NodeNext",
     "strict": true,
     "jsx": "react-jsx",
     "jsxImportSource": "hono/jsx"
