--- a/projects/hono-mcp-client-minimum/package.json
+++ b/projects/hono-mcp-client-minimum/package.json
@@ -7,7 +7,8 @@
   "dependencies": {
     "@modelcontextprotocol/sdk": "^1.10.2",
     "hono": "^4.7.7",
-    "openai": "^4.96.0"
+    "openai": "^4.96.0",
+    "zod": "^3.24.3"
   },
   "devDependencies": {
     "@types/bun": "latest",
