--- a/projects/fastapi-api-base/pyproject.toml
+++ b/projects/fastapi-api-base/pyproject.toml
@@ -5,8 +5,7 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
-    "fastapi>=0.115.8",
-    "uvicorn>=0.34.0",
+    "fastapi[standard]>=0.115.12",
 ]
 
 [dependency-groups]
