--- a/projects/hono-mcp-client/package.json
+++ b/projects/hono-mcp-client/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "hono-mcp-client-minimum",
+  "name": "hono-mcp-client",
   "type": "module",
   "scripts": {
     "dev": "dotenv -- bun run --hot src/index.tsx"
