--- a/projects/chatbot-ui/biome.json
+++ b/projects/chatbot-ui/biome.json
@@ -7,7 +7,7 @@
   },
   "files": {
     "ignoreUnknown": false,
-    "ignore": ["node_modules", "dist"]
+    "ignore": ["node_modules", "dist", "src/vite-env.d.ts"]
   },
   "formatter": {
     "enabled": true,
