--- a/projects/chatbot-ui/Dockerfile
+++ b/projects/chatbot-ui/Dockerfile
@@ -44,12 +44,7 @@ COPY --from=setup /root/.bun/bin/bun /root/.bun/bin/
 COPY . .
 
 RUN bun install --frozen-lockfile \
-    && bun run build \
-    && mkdir -p ./temp/prod
-
-COPY package.json bun.lock ./temp/prod/
-RUN cd ./temp/prod \
-    && bun install --frozen-lockfile --production
+    && bun run build
 
 # -----------------------------------------------
 # final stage
@@ -59,7 +54,6 @@ FROM base AS final
 ENV NODE_ENV=production
 
 COPY --from=builder /app/dist ./dist
-COPY --from=builder /app/temp/prod/node_modules ./node_modules
 
 RUN apk --no-cache add tzdata \
     && cp /usr/share/zoneinfo/Asia/Tokyo /etc/localtime \
