feat: Improve CICD pipeline

--- a/docker/portfolio/.env.secret.example
+++ b/docker/portfolio/.env.secret.example
@@ -1,7 +1,10 @@
-# Define environment variables here.
+# Define secret variables here.
+
+## litellm
 DATABASE_URL=postgresql://postgres:postgres@litellm-db:5432/litellm
 LITELLM_MASTER_KEY=sk-1234
 LITELLM_SALT_KEY=sk-XXXXXXXX
-OPENAI_API_KEY=sk-YYYYYYYY
+
+## litellm-db
 POSTGRES_USER=postgres
 POSTGRES_PASSWORD=postgres
