feat: add extension 'saoudrizwan.claude-dev'

--- a/projects/chatbot-ui/.devcontainer/devcontainer.json
+++ b/projects/chatbot-ui/.devcontainer/devcontainer.json
@@ -51,7 +51,8 @@
         "wix.vscode-import-cost",
         "shardulm94.trailing-spaces",
         "bradlc.vscode-tailwindcss",
-        "stivo.tailwind-fold"
+        "stivo.tailwind-fold",
+        "saoudrizwan.claude-dev"
       ]
     }
   }
