--- a/projects/chatbot-ui/package.json
+++ b/projects/chatbot-ui/package.json
@@ -10,21 +10,30 @@
     "test": "vitest run"
   },
   "dependencies": {
+    "@radix-ui/react-avatar": "^1.1.9",
+    "@radix-ui/react-separator": "^1.1.6",
+    "@radix-ui/react-slot": "^1.2.2",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "hono": "^4.7.9",
+    "lucide-react": "^0.509.0",
     "react": "^19.1.0",
-    "react-dom": "^19.1.0"
+    "react-dom": "^19.1.0",
+    "tailwind-merge": "^3.2.0"
   },
   "devDependencies": {
     "@biomejs/biome": "1.9.4",
     "@hono/react-renderer": "^1.0.1",
     "@hono/vite-build": "^1.6.1",
     "@hono/vite-dev-server": "^0.19.0",
+    "@shadcn/ui": "^0.0.4",
     "@tailwindcss/postcss": "^4.1.6",
     "@types/node": "^22.15.17",
     "@types/react": "^19.1.3",
     "@types/react-dom": "^19.1.3",
     "postcss": "^8.5.3",
     "tailwindcss": "^4.1.6",
+    "tw-animate-css": "^1.2.9",
     "typescript": "^5.8.3",
     "vite": "^6.3.5",
     "vite-tsconfig-paths": "^5.1.4",
