feat: Add support for line breaks in text input

--- a/projects/chatbot-ui/biome.json
+++ b/projects/chatbot-ui/biome.json
@@ -22,7 +22,8 @@
       "recommended": true,
       "correctness": {
         "noUnusedImports": "warn",
-        "noUnusedVariables": "warn"
+        "noUnusedVariables": "warn",
+        "useExhaustiveDependencies": "off"
       }
     }
   },
