--- a/projects/hono-mcp-server/Dockerfile
+++ b/projects/hono-mcp-server/Dockerfile
@@ -21,12 +21,16 @@ WORKDIR /app
 # Set the timezone to Asia/Tokyo
 RUN apk add --no-cache tzdata \
   && cp /usr/share/zoneinfo/Asia/Tokyo /etc/localtime \
-  && echo "Asia/Tokyo" > /etc/timezone
+  && echo "Asia/Tokyo" > /etc/timezone \
+  && adduser -D -s /bin/sh u7chan
 
 # Copy only the necessary files from the build stage
 COPY --from=build /app/node_modules ./node_modules
 COPY --from=build /app/src ./src
 COPY --from=build /app/tsconfig.json ./
+
+# Set the user to a non-root user
+USER u7chan
 
 # Expose the port the app runs on
 EXPOSE 3000
