--- a/projects/hono-mcp-server/package.json
+++ b/projects/hono-mcp-server/package.json
@@ -1,7 +1,7 @@
 {
   "name": "hono-mcp-server",
   "scripts": {
-    "dev": "dotenv -- bun run --hot src/index.ts"
+    "dev": "bun run --hot src/index.ts"
   },
   "dependencies": {
     "@modelcontextprotocol/sdk": "^1.11.1",
@@ -12,7 +12,6 @@
     "zod": "^3.24.4"
   },
   "devDependencies": {
-    "@types/bun": "latest",
-    "dotenv-cli": "^8.0.0"
+    "@types/bun": "latest"
   }
 }
