--- a/projects/hono-mcp-server/tsconfig.json
+++ b/projects/hono-mcp-server/tsconfig.json
@@ -1,9 +1,12 @@
 {
-  "compilerOptions": {
-    "moduleResolution": "bundler",
-    "target": "ESNext",
-    "strict": true,
-    "jsx": "react-jsx",
-    "jsxImportSource": "hono/jsx"
-  }
+	"compilerOptions": {
+		"moduleResolution": "bundler",
+		"target": "ESNext",
+		"strict": true,
+		"noEmit": true,
+		"skipLibCheck": true,
+		"jsx": "react-jsx",
+		"jsxImportSource": "hono/jsx"
+	},
+	"exclude": ["node_modules"]
 }
