--- a/projects/mcp-use-example/pyproject.toml
+++ b/projects/mcp-use-example/pyproject.toml
@@ -5,6 +5,7 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
+    "fastembed>=0.6.1",
     "langchain-openai>=0.3.16",
     "mcp-use>=1.2.9",
 ]
