--- a/projects/mcp-use-example/Dockerfile
+++ b/projects/mcp-use-example/Dockerfile
@@ -1,12 +1,13 @@
-FROM python:3.13-alpine AS base
+FROM python:3.12-slim AS base
 
 ENV TZ=Asia/Tokyo
 
 COPY --from=ghcr.io/astral-sh/uv:latest /uv /uvx /bin/
 
-RUN apk add --no-cache tzdata \
-  && cp /usr/share/zoneinfo/Asia/Tokyo /etc/localtime \
-  && echo "Asia/Tokyo" > /etc/timezone \
-  && adduser -D -s /bin/sh u7chan
+RUN apt-get update && \
+    apt-get install -y --no-install-recommends tzdata && \
+    ln -fs /usr/share/zoneinfo/Asia/Tokyo /etc/localtime && \
+    dpkg-reconfigure -f noninteractive tzdata && \
+    adduser --disabled-password --gecos "" u7chan
 
 USER u7chan
