--- a/deploy/mcp-inspector.yml
+++ b/deploy/mcp-inspector.yml
@@ -5,7 +5,7 @@ networks:
 services:
   mcp-inspector:
     container_name: mcp-inspector
-    image: ghcr.io/u7chan/monorepo/mcp-inspector::latest
+    image: ghcr.io/u7chan/monorepo/mcp-inspector:latest
     restart: always
     ports:
       - 6274:6274
