refactor: apply format

--- a/projects/chatbot-ui/biome.json
+++ b/projects/chatbot-ui/biome.json
@@ -24,6 +24,16 @@
         "noUnusedImports": "warn",
         "noUnusedVariables": "warn",
         "useExhaustiveDependencies": "off"
+      },
+      "nursery": {
+        "useSortedClasses": {
+          "level": "error",
+          "fix": "unsafe",
+          "options": {
+            "attributes": ["className", "tw"],
+            "functions": ["tw"]
+          }
+        }
       }
     }
   },
