--- a/projects/chatbot-ui/package.json
+++ b/projects/chatbot-ui/package.json
@@ -6,7 +6,7 @@
     "build": "vite build --mode client && vite build --mode server",
     "start": "node dist/index.js",
     "lint": "tsc && biome lint --error-on-warnings ./src",
-    "format": "biome check --write .",
+    "format": "biome check --write --unsafe .",
     "test": "vitest run"
   },
   "dependencies": {
