feat: Placed the library code under the src directory.

--- a/packages/example-lib/package.json
+++ b/packages/example-lib/package.json
@@ -1,12 +1,13 @@
 {
   "name": "example-lib",
-  "module": "index.ts",
   "type": "module",
+  "scripts": {
+    "test": "bun test"
+  },
   "devDependencies": {
     "@types/bun": "latest"
   },
   "peerDependencies": {
     "typescript": "^5"
-  },
-  "exports": "./index.ts"
+  }
 }
