--- a/.github/actions/build-docker-images/action.yml
+++ b/.github/actions/build-docker-images/action.yml
@@ -28,7 +28,7 @@ runs:
           PROJECT_DIR=$PROJECTS_DIR/$project
           DOCKER_FILE=$PROJECT_DIR/Dockerfile
           SEARCH_KEYWORD="AS ${{ inputs.stage }}"
-          PREBUILD_SCRIPT="pre-docker-build.sh"
+          PREBUILD_SCRIPT="$PROJECT_DIR/pre-docker-build.sh"
 
           echo "GHCR_URI: $GHCR_URI"
           echo "PROJECT_DIR: $PROJECT_DIR"
